--- a/1-screening.tex
+++ b/1-screening.tex
@@ -254,7 +254,7 @@ Parkes et al.\autocite{Parkes_2013} studied sixteen different MOF materials for 
 
 Later experimental work expanded these early separation studies to different types of MOF materials. Xiong et al.\autocite{Xiong_2015} studied a flexible zinc tetrazolate framework for xenon selective adsorption over krypton, argon and nitrogen. Thermodynamic analysis of the adsorption isotherms at various temperatures confirmed the occurrence of a ``breathing'' structural transition upon Xe uptake, contributing to a high working capacity for a pressure swing adsorption (PSA) cycle. Lee et al.\autocite{Lee_2016} compared the selective adsorption properties for Xe/Kr mixtures on three highly studied MOFs, namely UiO-66(Zr), MIL-100(Fe) and MIL-101(Cr), and confirmed a high potential of UiO-66(Zr) for separations under dynamic flow conditions. These authors also assessed the hydrothermal and radioactive stability of the material, a test seldom performed in the existing literature, and found it to be good. In a further study,\autocite{Lee_2018} they demonstrated that Xe/Kr selectivity could be further improved by ligand substitution.
 
-In parallel, computational studies were published to provide insight at the microscopic level into the mechanisms behind good (and bad) separation properties. Wang et al.\autocite{Wang_2014} studied 6 MOFs and COFs for adsorption of Xe and Xe/\ce{N2} separation, through GCMC simulations looking at the impact of pressure (and therefore pore filling) on selectivity. Anderson et al.\autocite{Anderson_2017} combined GCMC and biased MD simulations to elucidate the nature of adsorption- and diffusion-based Kr/Xe separation mechanisms in four archetypal nanoporous materials: SAPO-34, ZIF-8, UiO-66, and IRMOF-1. These authors draw a couple of general conclusions, including the fact that diffusion selectivity for krypton dominates membrane separation selectivity, and large pore cages and stiff pore windows are desirable --- however the scope of these conclusions is inherently limited by the small number of materials actually studied.
+In parallel, computational studies were published to provide insight at the microscopic level into the mechanisms behind good (and bad) separation properties. Wang et al.\autocite{Wang_2014_1} studied 6 MOFs and COFs for adsorption of Xe and Xe/\ce{N2} separation, through GCMC simulations looking at the impact of pressure (and therefore pore filling) on selectivity. Anderson et al.\autocite{Anderson_2017} combined GCMC and biased MD simulations to elucidate the nature of adsorption- and diffusion-based Kr/Xe separation mechanisms in four archetypal nanoporous materials: SAPO-34, ZIF-8, UiO-66, and IRMOF-1. These authors draw a couple of general conclusions, including the fact that diffusion selectivity for krypton dominates membrane separation selectivity, and large pore cages and stiff pore windows are desirable --- however the scope of these conclusions is inherently limited by the small number of materials actually studied.
 
 In a different family of materials, Tong et al.\autocite{Tong_2017} have surveyed the structure--property relationships of covalent organic frameworks (COFs) for noble gas separation, by GCMC simulations of 187 different materials for Kr/Ar, Xe/Kr and Rn/Xe separations. These authors included in their calculations some adsorption figures of merit (AFM), representative of the conditions of industrial vacuum (VSA) and pressure swing adsorption (PSA) processes.
 
