--- a/4-ml.tex
+++ b/4-ml.tex
@@ -6,11 +6,9 @@
 \chapter{Statistical Learning of Adsorption Properties}
 \vspace*{-1\baselineskip}
 
-\todo{add intro/transition to each big section}
-
 \section{Machine Learning Models}
 
-Machine learning (ML) models have been widely used in the field of nanoporous material study to characterize adsorption, transport, catalytic or mechanical properties, just to cite a few. It can in some cases replace very time-consuming simulations with simpler calculation of key descriptors that can help the model predict the desired properties. In other cases, it is used to describe the structure--property relationships learned by the ML model. However, machine learning is not a silver bullet, we cannot blindly apply it on any applications; it requires a thorough work on understanding the key variables that will improve the prediction. By using our work on the thermodynamic descriptors and our knowledge on the effect of pressure on the selectivity, I will build a machine learning model to characterize the separation of xenon from krypton at ambient pressure.
+Machine learning (ML) models have been widely used in the field of nanoporous material study to characterize adsorption, transport, catalytic or mechanical properties, just to cite a few. It can in some cases replace very time-consuming simulations with simpler calculation of key descriptors that can help the model predict the desired properties. In other cases, it is used to describe the structure--property relationships learned by the ML model. However, machine learning is not a silver bullet, we cannot blindly apply it on any applications; it requires a thorough work on understanding the key variables that will improve the prediction. By using our work on thermodynamic descriptors and our knowledge on the effect of pressure on the selectivity developed in the previous chapters, I will build a machine learning model to characterize the separation of xenon from krypton at ambient pressure.
 
 \subsection{From algorithm to machine learning}
 
@@ -291,9 +289,9 @@ Finally, I compiled all the parameters used in the construction of the final mod
 
 \section{Prediction of the Ambient-pressure Selectivity}
 
-Before diving deep into the model of our work, let us review the different literature contributions to xenon/krypton separation screenings. Simon et al.\ published one of the first articles on an ML-assisted screening approach for the separation of a Xe/Kr mixture extracted from the atmosphere.\autocite{Simon_2015} Their model's performance was highly relying on the Voronoi energy, which is basically an average of the interaction energies of a xenon atom at each Voronoi node.\autocite{Rycroft_2009} To rationalize this increase in performance, we can consider this Voronoi energy as a faster proxy for the adsorption enthalpy. By comparing it to the standard Widom insertion, I found that although it is faster, it is less accurate; and I developed a more effective alternative, the surface sampling (RAESS) using symmetry and non-accessible volumes blocking (see section~\ref{sct:RAESS}). Recently, Shi et al.\ used an energy grid to generate energy histograms as a descriptor for their ML model, which gives an exhaustive description of the infinitely diluted adsorption energies,\autocite{Shi_2023} but can be computationally expensive.
+Before diving deep into the model of our work, I will quickly review the different literature contributions to xenon/krypton separation screenings. Simon et al.\ published one of the first articles on an ML-assisted screening approach for the separation of a Xe/Kr mixture extracted from the atmosphere.\autocite{Simon_2015} Their model's performance was highly relying on the Voronoi energy, which is basically an average of the interaction energies of a xenon atom at each Voronoi node.\autocite{Rycroft_2009} To rationalize this increase in performance, we can consider this Voronoi energy as a faster proxy for the adsorption enthalpy. By comparing it to the standard Widom insertion, I found that although it is faster, it is less accurate; and I developed a more effective alternative, the surface sampling (RAESS) using symmetry and non-accessible volumes blocking (see section~\ref{sct:RAESS}). Recently, Shi et al.\ used an energy grid to generate energy histograms as a descriptor for their ML model, which gives an exhaustive description of the infinitely diluted adsorption energies,\autocite{Shi_2023} but can be computationally expensive.
 
-All the approaches described above can have good accuracy in the prediction of low-pressure adsorption (i.e., in the limit of zero loading) but are not suitable for prediction of adsorption in the high-pressure regime, when the material is near saturation uptake. While this later task is routinely performed by Grand Canonical Monte Carlo (GCMC) simulations, there is a lack of methods at lower computational cost for high-throughput screening. To better frame my challenge, I am essentially trying to predict the selectivity in the nanopores of a material at high pressure, where adsorbates are interacting with each other, while only having information on the interaction at infinite dilution. The comparison between the low and high-pressure cases gives key information on the origin of the differences of selectivity. For instance, I have previously shown that selectivity could drop between the low and ambient pressure cases in the Xe/Kr separation application (see chapters 2 and 3), and it was mainly attributed to the presence of different pore sizes and potential reorganizations due to adsorbate--adsorbate interactions.
+All the approaches described above have a good accuracy in the prediction of low-pressure adsorption (i.e., in the limit of zero loading) but are not suitable for prediction of adsorption in the high-pressure regime, when the material is near saturation uptake. While this later task is routinely performed by Grand Canonical Monte Carlo (GCMC) simulations, there is a lack of methods at lower computational cost for high-throughput screening. To better frame my challenge, I am essentially trying to predict the selectivity in the nanopores of a material at high pressure, where adsorbates are interacting with each other, while only having information on the interaction at infinite dilution. The comparison between the low and high-pressure cases gives key information on the origin of the differences of selectivity. For instance, I have previously shown that selectivity could drop between the low and ambient pressure cases in the Xe/Kr separation application (see chapters 2 and 3), and it was mainly attributed to the presence of different pore sizes and potential reorganizations due to adsorbate--adsorbate interactions.
 
 I combined grid-based descriptors described in the previous chapter (section~\ref{sct:grid}) to statistical characterizations of the pore size to propose a set of useful ML descriptors for fast and accurate ambient-pressure selectivity prediction using an optimized XGBoost model. And I highlight its performance on the case of xenon/krypton separation in the CoRE MOF 2019 database\autocite{Chung_2019}.
 
@@ -306,7 +304,7 @@ I want to predict the Xe/Kr ambient-pressure selectivity faster than standard te
 
 I decided to use a logarithmic transform of the selectivity instead of the raw value because I am more interested in the order of magnitude of the selectivity values than to predict the higher values of selectivity --- an ML model that predicts selectivity values can lower down the errors by focusing the prediction more on the higher values than the lower ones. By focusing on the logarithmic transform of the selectivity, we can better separate the different orders of magnitude of the selectivity values. This approach distributes more evenly the efforts on all the different values of selectivity. Moreover, this logarithmic transform is related to a thermodynamic quantity that will be elaborated later in the section~\ref{sct:thermo}; it can therefore be easily compared with the energy descriptors I introduced in the previous chapter 3.
 
-\subsubsection{Database and data preparation}
+\subsubsection{Database and data generation}
 
 To test our methodology on a set of realistic MOFs, I chose to screen the 12,020 all-solvent removed (ASR) structures of the CoRE MOF 2019 database\autocite{Chung_2019}. After removing the disordered and the non-MOF structures as well as the ones with a large unit cell volume of \SI{20}{\cubic\nano\meter}, I obtained a set of 9,748 structures. Then, I analyze the string information given by the Zeo++ software\autocite{zeopp_Willems2012} to reduce the number to 9,177 by removing the structures that are not tridimensional, where solvents are still detected (wrongly classified in ``all solvent removed’’), or where the metal is radioactive or fissile (e.g., Pu-MOF TAGCIP\autocite{Diwu_2010}, Np-MOF KASHUK\autocite{Martin_2017}, U-MOF ABETAE\autocite{Jouffret_2011} or Th-MOF ASAMUE\autocite{Liang_2016}) --- this can be a source of risks in a nuclear waste processing plant. Furthermore, I added a condition on the largest cavity diameter (LCD) to keep only the structures that can accept a xenon molecule: 8,529 structures have an LCD higher than \SI{4}{\angstrom} (approximately the size of a xenon molecule). This is equivalent to removing the structures with very unfavorable adsorption enthalpies, that are not promising for our adsorption-based separation (see section~\ref{sct:RAESS}).
 
@@ -603,7 +601,9 @@ The second structure BIMDIL is also among the most selective with a selectivity 
 %% conclusions + sum-up of some qualitative rules
 These two examples allow us to understand a bit more how the model tells apart the structures that will lose selectivity at higher pressure from the ones that will not. Most of the dependence plots can give very strong association between the descriptors and their effects; the outliers are rare enough that the inner logic of our model can be understood. As developed previously, the first three descriptors set a baseline on few information on the eventual drop of selectivity; then the other descriptors contribution is either positive, negligible or negative depending on the domain of values the descriptor is in. For instance, the average pore size and the largest cavity diameter need to be around very specific values to maximize the chance of keeping the selectivity at higher pressure, which was highlighted by previous works that emphasize on the importance of pore sizes close to the size of xenon for Xe/Kr separation. The difference of entropy between the ambient temperature and \SI{900}{\kelvin} is surprising descriptor that separates selective structures depending on whether its value is within a given range. The difference of void fraction occupied by xenon and krypton is also very interesting since it affects the selectivity differently depending on whether it is highly selective or not, and the contribution is more or less proportional to its value. Different ways of measuring the disparity of the PSD and interaction energy distribution are key in sorting highly selective structures (in blue on the dependence plot Figure~\ref{fgr:pdp_selection}) between the ones maintaining their performance and the ones decreasing in selectivity. Among others, we can find the difference between the average pore size and the LCD, as well as the standard deviation of the PSD or of the Boltzmann weighted energy distribution that would behave very differently according to the domain in which the value lies. The SHAP dependence plots are very valuable reading grid to understand the mechanisms behind our ML model and more broadly to what it understood from the origins of Xe/Kr separation.
 
-\subsection{Conclusions and perspectives}
+\textbf{Data Availability:} \url{} \todo{create a repo github with the different models and data}
+
+\section{Beyond thermodynamic considerations}
 
 In order to better understand separation processes inside nanoporous materials, I performed a machine learning prediction of Xe/Kr ambient-pressure selectivity that is faster than standard GCMC calculations. For MOF structures of the CoRE MOF 2019 database, a xenon/krypton selectivity evaluation would take less than a minute, while an equivalent GCMC calculation takes around \SI{40}{\minute}. Unlike most of the selectivity predictions of the literature, I chose to predict a selectivity in the logarithmic scale, because it focuses more on the order magnitude than the exact value of the selectivity of highly selective materials. Moreover, the conversion to an exchange Gibbs free energy allows a more thermodynamic approach based on enthalpy, entropy and free energy values. The challenge was then to predict a free energy equivalent of the ambient-pressure selectivity by using the low-pressure selectivity along with key energy, geometrical and chemical descriptors. The final, fully optimized ML model performs very well with an RMSE of \SI{0.36}{\kilo\joule\per\mole}, which corresponds to a $0.06$ RMSE on the base-10 log of the selectivity.
 
@@ -614,15 +614,11 @@ The final ML model can be used in a well-designed workflow to find the best perf
 
 %% Drawbacks + perspectives
 This study ambitions to add new descriptor ideas to help the development of ever more efficient screening methodologies to find the best materials for target applications. However, like many other studies on the topic, this one also relies on a few strong assumptions --- the simulations are performed in rigid frameworks with non-polarized classical force fields. As suggested in the literature, the most selective materials ever synthesized for Xe/Kr separation are all based on the effect of open-metal sites that uses the difference of polarizability between the two molecules to efficiently separate them.\autocite{Li_2019, Pei_2022} Moreover, the structures can be made flexible using flexible force fields with adapted simulation methodologies\autocite{Bousquet2012} or by using multiple rigid simulations of snapshots from NPT simulations\autocite{Witman_2017}.
-It would be possible to improve the simulations at the cost of CPU times, if we coupled it with a reduction of simulation time like the one presented in this chapter. The quest of ever-faster evaluation tools will allow us to investigate more complex properties and uncover structures with ever more interesting characteristics.
+It would be possible to improve the simulations at the cost of CPU times, if we coupled it with a reduction of simulation time like the one presented in this chapter. The quest of ever-faster evaluation tools will allow us to investigate more complex properties and uncover structures with ever more interesting characteristics. These potential improvements will be discussed more in depth in the chapter 6.
 
+\vspace{1cm}
 
-\vspace{2cm}
-\todo{Transition to next chapter}
-
-\section{Beyond thermodynamic considerations}
-
-\textbf{Data Availability:} \url{} \todo{create a repo github with the different models and data}
+In the next chapter, I will focus on another shortcoming of the simple thermodynamic approach which is the consideration of kinetic limitations in the screening process. In our problem of adsorbent-material separation, the transport effect is not key in evaluating the separation performance of the material but is rather a constraint that could alter the performance of some seemingly top materials. Different methodologies will be explored in order to incorporate these computationally expensive and experimentally hard to get transport properties. 
 
 \OnlyInSubfile{\printglobalbibliography}
 
