--- a/publications.bib
+++ b/publications.bib
@@ -39,210 +39,11 @@
   url = {https://doi.org/10.1039/D2SC05810C},
 }
 
-@article{Ren_2023_ml,
-  keywords = {preprint},
-  author={Ren, Emmanuel and Coudert, Fran{\c{c}}ois-Xavier},
-  doi = {},
-  journal = {ChemRxiv},
-  title = {Gas Separation Selectivity Prediction Based on Finely Designed Descriptors},
-  year = {2023},
-}
-@article{Parkes_2013,
-  author = { Parkes, Marie V. and Staiger, Chad L. and Perry IV, John J. and Allendorf, Mark D. and Greathouse, Jeffery A. },
-  title = { Screening metal--organic frameworks for selective noble gas adsorption in air: effect of pore size and framework topology },
-  journal = { Phys. Chem. Chem. Phys. },
-  year = { 2013 },
-  volume = { 15 },
-  issue = { 23 },
-  pages = { 9093 },
-  doi = {10.1039/c3cp50774b},
-  url = {http://doi.org/10.1039/c3cp50774b},
-}
-@article{Xiong_2015,
-  author = { Xiong, Shunshun and Liu, Qiang and Wang, Qian and Li, Wei and Tang, Yuanming and Wang, Xiaolin and Hu, Sheng and Chen, Banglin },
-  title = { A flexible zinc tetrazolate framework exhibiting breathing behaviour on xenon adsorption and selective adsorption of xenon over other noble gases },
-  journal = { J. Mater. Chem. A },
-  year = { 2015 },
-  volume = { 3 },
-  issue = { 20 },
-  pages = { 10747--10752 },
-  doi = {10.1039/C5TA00460H},
-  url = {http://doi.org/10.1039/C5TA00460H},
-}
-@article{Lee_2016,
-  author = { Lee, Seung-Joon and Yoon, Tae-Ung and Kim, Ah-Reum and Kim, Seo-Yul and Cho, Kyung-Ho and Hwang, Young Kyu and Yeon, Jei-Won and Bae, Youn-Sang },
-  title = { Adsorptive separation of xenon/krypton mixtures using a zirconium-based metal-organic framework with high hydrothermal and radioactive stabilities },
-  journal = { J. Hazard. Mater. },
-  year = { 2016 },
-  volume = { 320 },
-  pages = { 513--520 },
-  doi = {10.1016/j.jhazmat.2016.08.057},
-  url = {http://doi.org/10.1016/j.jhazmat.2016.08.057},
-}
-@article{Lee_2018,
-  author = { Lee, Seung-Joon and Kim, Seongwoo and Kim, Eun-Jung and Kim, Min and Bae, Youn-Sang },
-  title = { Adsorptive separation of xenon/krypton mixtures using ligand controls in a zirconium-based metal-organic framework },
-  journal = { Chem. Eng. J. },
-  year = { 2018 },
-  volume = { 335 },
-  pages = { 345--351 },
-  doi = {10.1016/j.cej.2017.10.155},
-  url = {http://doi.org/10.1016/j.cej.2017.10.155},
-}
-@article{Wang_2014,
-  author = { Wang, Qian and Wang, Hui and Peng, Shuming and Peng, Xuan and Cao, Dapeng },
-  title = { Adsorption and Separation of Xe in Metal--Organic Frameworks and Covalent--Organic Materials },
-  journal = { J. Phys. Chem. C },
-  year = { 2014 },
-  volume = { 118 },
-  issue = { 19 },
-  pages = { 10221--10229 },
-  doi = {10.1021/jp503255g},
-  url = {http://doi.org/10.1021/jp503255g},
-}
-@article{Liu_2012,
-  author = { Liu, Jian and Thallapally, Praveen K. and Strachan, Denis },
-  title = { Metal--Organic Frameworks for Removal of Xe and Kr from Nuclear Fuel Reprocessing Plants },
-  journal = { Langmuir },
-  year = { 2012 },
-  volume = { 28 },
-  issue = { 31 },
-  pages = { 11584--11589 },
-  doi = {10.1021/la301870n},
-  url = {http://doi.org/10.1021/la301870n},
-}
-@article{Bae_2013,
-  author = { Bae, Youn-Sang and Hauser, Brad G. and Col\'on, Yamil J. and Hupp, Joseph T. and Farha, Omar K. and Snurr, Randall Q. },
-  title = { High xenon/krypton selectivity in a metal-organic framework with small pores and strong adsorption sites },
-  journal = { Micropor. Mesopor. Mater. },
-  year = { 2013 },
-  volume = { 169 },
-  pages = { 176--179 },
-  doi = {10.1016/j.micromeso.2012.11.013},
-  url = {http://doi.org/10.1016/j.micromeso.2012.11.013},
-}
-@article{Liu_2014,
-  author = { Liu, Jian and Fernandez, Carlos A. and Martin, Paul F. and Thallapally, Praveen K. and Strachan, Denis M. },
-  title = { A Two-Column Method for the Separation of Kr and Xe from Process Off-Gases },
-  journal = { Ind. Eng. Chem. Res. },
-  year = { 2014 },
-  volume = { 53 },
-  issue = { 32 },
-  pages = { 12893--12899 },
-  doi = {10.1021/ie502156h},
-  url = {http://doi.org/10.1021/ie502156h},
-}
-@article{Anderson_2017,
-  author = { Anderson, Ryther and Schweitzer, Benjamin and Wu, Ting and Carreon, Moises A. and G\'omez-Gualdr\'on, Diego A. },
-  title = { Molecular Simulation Insights on Xe/Kr Separation in a Set of Nanoporous Crystalline Membranes },
-  journal = { ACS Appl. Mater. Interfaces },
-  year = { 2017 },
-  volume = { 10 },
-  issue = { 1 },
-  pages = { 582--592 },
-  doi = {10.1021/acsami.7b14791},
-  url = {http://doi.org/10.1021/acsami.7b14791},
-}
-@article{ZarabadiPoor_2018,
-  author = { Zarabadi-Poor, Pezhman and Marek, Radek },
-  title = { In Silico Study of (Mn, Fe, Co, Ni, Zn)-BTC Metal--Organic Frameworks for Recovering Xenon from Exhaled Anesthetic Gas },
-  journal = { ACS Sustainable Chem. Eng. },
-  year = { 2018 },
-  volume = { 6 },
-  issue = { 11 },
-  pages = { 15001--15006 },
-  doi = {10.1021/acssuschemeng.8b03475},
-  url = {http://doi.org/10.1021/acssuschemeng.8b03475},
-}
-@article{Vazhappilly_2016,
-  author = { Vazhappilly, Tijo and Ghanty, Tapan K. and Jagatap, B. N. },
-  title = { Computational Modeling of Adsorption of Xe and Kr in M-MOF-74 Metal Organic Frame Works with Different Metal Atoms },
-  journal = { J. Phys. Chem. C },
-  year = { 2016 },
-  volume = { 120 },
-  issue = { 20 },
-  pages = { 10968--10974 },
-  doi = {10.1021/acs.jpcc.6b02782},
-  url = {http://doi.org/10.1021/acs.jpcc.6b02782},
-}
-@article{Moosavi_2019,
-  doi = {10.1038/s41467-019-08483-9},
-  url = {https://doi.org/10.1038/s41467-019-08483-9},
-  year = {2019},
-  month = feb,
-  publisher = {Springer Science and Business Media {LLC}},
-  volume = {10},
-  number = {1},
-  author = {Seyed Mohamad Moosavi and Arunraj Chidambaram and Leopold Talirz and Maciej Haranczyk and Kyriakos C. Stylianou and Berend Smit},
-  title = {Capturing chemical intuition in synthesis of metal-organic frameworks},
-  journal = {Nature Communications}
-}
-@article{Greenaway_2018,
-  doi = {10.1038/s41467-018-05271-9},
-  url = {https://doi.org/10.1038/s41467-018-05271-9},
-  year = {2018},
-  month = jul,
-  publisher = {Springer Science and Business Media {LLC}},
-  volume = {9},
-  number = {1},
-  author = {R. L. Greenaway and V. Santolini and M. J. Bennison and B. M. Alston and C. J. Pugh and M. A. Little and M. Miklitz and E. G. B. Eden-Rump and R. Clowes and A. Shakil and H. J. Cuthbertson and H. Armstrong and M. E. Briggs and K. E. Jelfs and A. I. Cooper},
-  title = {High-throughput discovery of organic cages and catenanes using computational screening fused with robotic synthesis},
-  journal = {Nature Communications}
-}
-@article{Guo_2018,
-  author = { Guo, Fangyuan and Liu, Yu and Hu, Jun and Liu, Honglai and Hu, Ying },
-  title = { Fast screening of porous materials for noble gas adsorption and separation: a classical density functional approach },
-  journal = { Phys. Chem. Chem. Phys. },
-  year = { 2018 },
-  volume = { 20 },
-  issue = { 44 },
-  pages = { 28193--28204 },
-  doi = {10.1039/C8CP03777A},
-  url = {http://doi.org/10.1039/C8CP03777A},
-}
-@article{Colon_2017,
-  author = { Col\'on, Yamil J. and G\'omez-Gualdr\'on, Diego A. and Snurr, Randall Q. },
-  title = { Topologically Guided, Automated Construction of Metal--Organic Frameworks and Their Evaluation for Energy-Related Applications },
-  journal = { Cryst. Growth Des. },
-  year = { 2017 },
-  volume = { 17 },
-  issue = { 11 },
-  pages = { 5801--5810 },
-  doi = {10.1021/acs.cgd.7b00848},
-  url = {http://doi.org/10.1021/acs.cgd.7b00848},
-}
-@article{Colon_2014,
-  author = { Col\'on, Yamil J. and Snurr, Randall Q. },
-  title = { High-throughput computational screening of metal--organic frameworks },
-  journal = { Chem. Soc. Rev. },
-  year = { 2014 },
-  volume = { 43 },
-  issue = { 16 },
-  pages = { 5735--5749 },
-  doi = {10.1039/C4CS00070F},
-  url = {http://doi.org/10.1039/C4CS00070F},
-}
-@article{Farha_2012,
-  author = { Farha, Omar K. and Eryazici, Ibrahim and Jeong, Nak Cheon and Hauser, Brad G. and Wilmer, Christopher E. and Sarjeant, Amy A. and Snurr, Randall Q. and Nguyen, SonBinh T. and Yazayd{\i}n, A. \"Ozg\"ur and Hupp, Joseph T. },
-  title = { Metal--Organic Framework Materials with Ultrahigh Surface Areas: Is the Sky the Limit? },
-  journal = { J. Am. Chem. Soc. },
-  year = { 2012 },
-  volume = { 134 },
-  issue = { 36 },
-  pages = { 15016--15021 },
-  doi = {10.1021/ja3055639},
-  url = {http://doi.org/10.1021/ja3055639},
-}
-@article{Nezbeda_1991,
-	doi = {10.1080/08927029108022424},
-	url = {https://doi.org/10.1080%2F08927029108022424},
-	year = 1991,
-	month = {feb},
-	publisher = {Informa {UK} Limited},
-	volume = {5},
-	number = {6},
-	pages = {391--403},
-	author = {Ivo Nezbeda and Ji{\v{r}}{\'{\i}} Kolafa},
-	title = {A New Version of the Insertion Particle Method for Determining the Chemical Potential by Monte Carlo Simulation},
-	journal = {Molecular Simulation}
-}
+% @article{Ren_2023_ml,
+%   keywords = {preprint},
+%   author={Ren, Emmanuel and Coudert, Fran{\c{c}}ois-Xavier},
+%   doi = {},
+%   journal = {ChemRxiv},
+%   title = {Gas Separation Selectivity Prediction Based on Finely Designed Descriptors},
+%   year = {2023},
+% }
